# codegraph

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DOC_INDEX.md  README.md  package-lock.json  package.json
__tests__/: extraction.test.ts  field-name-retrieval.test.ts  frontload-hook.test.ts  kernel-ccpp-parity.test.ts  kernel-csharp-parity.test.ts  kernel-dart-parity.test.ts  kernel-grammar-parity.test.ts  kernel-kotlin-parity.test.ts  kernel-lua-parity.test.ts  kernel-php-parity.test.ts  kernel-r-parity.test.ts  kernel-ruby-parity.test.ts  kernel-scaffold.test.ts  kernel-scala-parity.test.ts  kernel-swift-parity.test.ts  kernel-tsjs-parity.test.ts  liveness-watchdog.test.ts  resolution.test.ts  resolver-pool-sizing.test.ts  sync.test.ts  upgrade.test.ts  wal-deferral.test.ts  watcher.test.ts
__tests__/fixtures/kernel-parity/: Torture.cs  TortureCtors.dart  TortureDocs.scala  TortureDoubleWalk.dart  TortureExt.scala  TortureFileScoped.cs  TortureFnref.scala  TortureFnrefDart.dart  TortureGiven.scala  TortureHtml.php  TortureIndent.scala  TortureMini.dart  TortureMisc.scala  TortureModule.module  TortureScript.kts  TortureScript.sc  TortureSigs.dart  TortureTopLevel.cs  TortureVref.scala  TortureVrefDart.dart  torture.R  torture.c  torture.cpp  (+9 more)
codegraph-kernel/: .gitignore  Cargo.toml  build.rs
codegraph-kernel/src/: buffers.rs  csharp.rs  dart.rs  kotlin.rs  langs.rs  lib.rs  lua.rs  php.rs  rlang.rs  ruby.rs  scala.rs  swift.rs
codegraph-kernel/src/ccpp/: mod.rs
codegraph-kernel/src/tsjs/: mod.rs
docs/ai/: AGENT_WORKFLOWS.md  AI_PIPELINE_MAP.md  AI_SYSTEM_MAP.md  MODEL_GUARDRAILS.md
docs/architecture/: AST_PARSER_AND_GRAPH_BUILD.md  CALL_GRAPH.md  CHANGE_BLAST_RADIUS.md  DATA_CONTRACTS.md  DATA_LINEAGE.md  DEPENDENCY_GRAPH.md  MODULE_OWNERSHIP.md  REPOSITORY_MAP.md  RUNTIME_DEPENDENCY_TREE.md  RUNTIME_FLOWS.md  SERVICE_TOPOLOGY.md  SYSTEM_OVERVIEW.md
docs/design/: ccpp-kernel-port-checklist.md  csharp-kernel-port-checklist.md  dart-kernel-port-checklist.md  dispatch-synthesizer-backlog.md  kotlin-kernel-port-checklist.md  lua-luau-kernel-port-checklist.md  php-kernel-port-checklist.md  r-kernel-port-checklist.md  ruby-kernel-port-checklist.md  rust-kernel-migration-plan.md  scala-kernel-port-checklist.md  swift-kernel-port-checklist.md
docs/development/: LOCAL_DEVELOPMENT.md  SAFE_CHANGE_ZONES.md  TESTING_STRATEGY.md
docs/integrations/: EXTERNAL_INTEGRATIONS.md
docs/operations/: DEPLOYMENT.md  FAILURE_MODES.md  OBSERVABILITY.md  OPERATIONAL_FAILURE_GRAPH.md  RUNBOOK.md
docs/security/: SECURITY_MODEL.md  TRUST_BOUNDARIES.md
scripts/: build-kernel.sh  dump-graph.mjs  kernel-parity.mjs
site/: package-lock.json  package.json
src/: directory.ts  index.ts
src/context/: index.ts
src/db/: index.ts  queries.ts
src/extraction/: grammars.ts  index.ts  store-worker.ts  tree-sitter.ts
src/mcp/: liveness-watchdog.ts  tools.ts
src/resolution/: callback-synthesizer.ts  import-resolver.ts  index.ts  memory-budget.ts  name-matcher.ts  resolver-pool.ts  resolver-worker.ts
src/sync/: watcher.ts
src/upgrade/: index.ts
telemetry-worker/: package-lock.json  package.json
(+8 files in other folders)
